window.visualViewport.clientWidth|Height shouldn't assume scaled scrollbar

BUG=634424

Review-Url: https://codereview.chromium.org/2226663003
Cr-Commit-Position: refs/heads/master@{#410386}

Former-commit-id: 78db10b48f946769c18992bf80c7b344da671c75